--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,6 @@ dependencies {
 
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
-
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     kapt 'com.github.bumptech.glide:compiler:4.10.0'
 
@@ -53,5 +52,12 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.1.0"
 
     implementation 'com.google.android.material:material:1.0.0'
+
+    implementation "androidx.paging:paging-runtime:2.1.0"
+
+    testImplementation "androidx.paging:paging-common:2.1.0"
+
+    implementation "androidx.paging:paging-rxjava2:2.1.0"
+
 
 }
